add duebefore example